@@ -7,6 +7,8 @@ File Name: CHANGES
 - Replace trans and sort by transz in UMFPACK and test.
 - Slightly modify printing format for the AMG parameters.
 - Fix and update some parameters in ini.
+- Revise some warning messages in Makefile.
+- Confirm FEniCS conf problem: It sets CC=/usr/bin/gcc.
 - Update util/stat.h.
 
 09/09/2015 FASP 1.7.8:
